[package]
name = "matcha"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]

[dependencies]
hex = "0.3.1"
rust_sodium = "0.5.0"
rocksdb = "0.8.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9.2"
zip = "0.2.6"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
protobuf = "1.4.3"
clap = "2.29.1"
