[package]
name = "matcha"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]

[dependencies]
hex = "0.3.1"
rust_sodium = "0.5.0"
rocksdb = "0.8.2"

serde = "1.0"
serde_derive = "1.0"
protobuf = "1.4.3"

zip = "0.2.6"
bytes = "0.4"
byteorder = "1.2.1"
futures = "0.1"

tokio-io = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1.2"

clap = "2.29.1"
failure = "0.1.1"
failure_derive = "0.1.1"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
rand = "0.4.2"
tempdir = "0.3.5"
merkle = "1.5.0"
ring = "0.12.1"

[build-dependencies]
protoc-rust = "1.4.3"
